<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#3CA5DB"
            android:gravity="center"
            android:text="@string/premium_toolbar"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:background="#1C7CAD"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_premium"
                    android:minWidth="162dp"
                    android:minHeight="38dp"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.26">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.9"
                        android:src="@drawable/ic_premium_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/premium_update_now"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/card_premium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <ImageView
                        android:id="@+id/iv_list_spam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_spam_list"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_title_list_spam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:maxWidth="300dp"
                        android:text="@string/premium_list_spam"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/iv_list_spam"
                        app:layout_constraintTop_toTopOf="@+id/iv_list_spam" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:maxWidth="300dp"
                        android:text="@string/premium_list_spam_text"
                        android:textColor="#80000000"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_list_spam"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title_list_spam" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/card_premium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <ImageView
                        android:id="@+id/iv_unlimit_block"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_unlimit_list_block"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_unlimit_block"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:maxWidth="300dp"
                        android:text="@string/premium_unlimit_list_block"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/iv_unlimit_block"
                        app:layout_constraintTop_toTopOf="@+id/iv_unlimit_block" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:maxWidth="300dp"
                        android:text="@string/premium_unlimit_list_block_text"
                        android:textColor="#80000000"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_unlimit_block"
                        app:layout_constraintTop_toBottomOf="@+id/tv_unlimit_block" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/card_premium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                    <ImageView
                        android:id="@+id/iv_auto_memory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_auto_memory"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_auto_memory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:text="@string/premium_auto_control_memory"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:maxWidth="300dp"
                        app:layout_constraintStart_toEndOf="@+id/iv_auto_memory"
                        app:layout_constraintTop_toTopOf="@+id/iv_auto_memory" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:maxWidth="300dp"
                        android:text="@string/premium_auto_control_memory_text"
                        android:textColor="#80000000"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_auto_memory"
                        app:layout_constraintTop_toBottomOf="@+id/tv_auto_memory" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/card_premium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                    <ImageView
                        android:id="@+id/iv_no_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_no_add"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_no_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:text="@string/premium_not_ads"
                        android:maxWidth="300dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/iv_no_add"
                        app:layout_constraintTop_toTopOf="@+id/iv_no_add" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:maxWidth="300dp"
                        android:text="@string/premium_not_ads_text"
                        android:textColor="#80000000"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_no_add"
                        app:layout_constraintTop_toBottomOf="@+id/tv_no_add" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/card_premium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

                    <ImageView
                        android:id="@+id/iv_priority_support"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_priority_support"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_priority_support"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:maxWidth="300dp"
                        android:text="@string/premium_priority_support"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/iv_priority_support"
                        app:layout_constraintTop_toTopOf="@+id/iv_priority_support" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:maxWidth="300dp"
                        android:text="@string/premium_priority_support_text"
                        android:textColor="#80000000"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_priority_support"
                        app:layout_constraintTop_toBottomOf="@+id/tv_priority_support" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="12dp"
                    android:maxWidth="365dp"
                    android:text="@string/premium_instructions"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>